add 'gvmap' and 'gvmap.sh' to the CMake build system
Gitlab: #1753, #1836

--- a/cmd/CMakeLists.txt
+++ b/cmd/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(dot)
 add_subdirectory(edgepaint)
+add_subdirectory(gvmap)
 add_subdirectory(gvpr)
 add_subdirectory(mingle)
 add_subdirectory(smyrna)
